[package]
name        = "mfsk-ffi"
version     = "0.1.0"
edition     = "2024"
license     = "GPL-3.0-or-later"
publish     = false
description = "C ABI for mfsk-core — exposes WSJT-family (FT8/FT4/FST4/WSPR/JT9/JT65/Q65) decoders and synthesisers to C/C++/Kotlin via a cbindgen-generated mfsk.h header."

[lib]
name       = "mfsk"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
mfsk-core = { path = "../mfsk-core", version = "0.1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"
